--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Хос дүрсЫ</title>
+    <title>--Хос дүрс--</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet prefetch"
+    <link rel="sthttps://github.com/dashdemberel2019/game1.gitylesheet prefetch"
     //href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
     />
     <link
