--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Хос дүрс</title>
+    <title>Хос дүрс!</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="sthttps://github.com/dashdemberel2019/game1.gitylesheet prefetch"
